Fix meethod use